# canopy

./: .gitignore  LICENSE  README.md  pyproject.toml
canopy/: __main__.py  database.py  documents.py  env.py  mcp.py  models.py  release_check.py  server.py
canopy/static/css/: tailwind.css
canopy/templates/: chat.html
packaging/: build.py  venvstacks.toml
packaging/canopy_app/: __init__.py  __main__.py  app.py  config.py  server_manager.py  updater.py
packaging/requirements/app-canopy-app/: packages-app-canopy-app-macosx_arm64.txt  requirements-app-canopy-app-macosx_arm64.in  requirements-app-canopy-app-macosx_arm64.txt  requirements-app-canopy-app-macosx_arm64.txt.json
packaging/requirements/cpython-3.11/: packages-cpython-3.11-macosx_arm64.txt  requirements-cpython-3.11-macosx_arm64.in  requirements-cpython-3.11-macosx_arm64.txt  requirements-cpython-3.11-macosx_arm64.txt.json
packaging/requirements/framework-canopy-framework/: packages-framework-canopy-framework-macosx_arm64.txt  requirements-framework-canopy-framework-macosx_arm64.in  requirements-framework-canopy-framework-macosx_arm64.txt  requirements-framework-canopy-framework-macosx_arm64.txt.json
scripts/: build-app.sh  run-server.sh
tests/: test_database.py  test_env.py  test_release_check.py
