[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
dynamic = ["version"]
description = "Cache-aware branching chat client for oMLX"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.0",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.10.0",
    "docx2python>=2.0.0",
    "markitdown>=0.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx",
]

[tool.setuptools.dynamic]
version = {attr = "canopy._version.__version__"}

[tool.setuptools.packages.find]
include = ["canopy*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
